Update Realtime object detection with opencv.ipynb

--- a/Realtime object detection with opencv.ipynb
+++ b/Realtime object detection with opencv.ipynb
@@ -564,7 +564,7 @@
     }
    ],
    "source": [
-    "cap = cv2.VideoCapture(r\"C:\\Users\\John Taiwo\\Desktop\\opencv\\dog_vid.mp4\")\n",
+    "cap = cv2.VideoCapture(r\"C:\\Users\\Kemi Akinwehinmi\\Desktop\\opencv\\dog_vid.mp4\")\n",
     "\n",
     "#check if video is opened correctly\n",
     "if not cap.isOpened():\n",
