Update Realtime object detection with opencv.ipynb

--- a/Realtime object detection with opencv.ipynb
+++ b/Realtime object detection with opencv.ipynb
@@ -20,6 +20,7 @@
    "source": [
     "config_file = r\"C:\\Users\\Kemi Akinwehinmi\\Desktop\\opencv\\ssd_mobilenet_v3_large_coco_2020_01_14.pbtxt\"\n",
     "frozen_model = r\"C:\\Users\\Kemi Akinwehinmi\\Desktop\\opencv\\frozen_inference_graph.pb\""
+    "frozen_model = r\"C:https://github.com/aoluwakemi/Dogs-in-Natural-Spaces/blob/aoluwakemi/frozen_inference_graph.pb
    ]
   },
   {
