--- a/Model/image augmentation.ipynb
+++ b/Model/image augmentation.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images_path = glob.glob(r\"C:\\Users\\John Taiwo\\Desktop\\opencv\\data\\train\\looselyChained\\*\")\n",
+    "images_path = glob.glob(r\"C:\\Users\\kemi\\Desktop\\opencv\\data\\train\\looselyChained\\*\")\n",
     "\n",
     "for item in images_path:\n",
     "    if (os.path.isfile(item)) & ('png' in item or 'jpg' in item or 'jpeg' in item or 'PNG' in item or 'JPG' in item or 'JPEG' in item):\n",
@@ -40,7 +40,7 @@
     "            im = im.convert('RGB')\n",
     "        imResize = im.resize((250,250),Image.ANTIALIAS)\n",
     "        imResize.save(item,'JPEG',quality = 90)\n",
-    "fps = glob.glob(r\"C:\\Users\\John Taiwo\\Desktop\\opencv\\data\\train\\looselyChained\\*\")\n",
+    "fps = glob.glob(r\"C:\\Users\\kemi\\Desktop\\opencv\\data\\train\\looselyChained\\*\")\n",
     "images = np.array(\n",
     "    [cv2.cvtColor(cv2.imread(fp),cv2.COLOR_BGR2RGB) for fp in fps],\n",
     "    dtype = np.uint8\n",
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "aug_times = 50\n",
-    "path = r\"C:\\Users\\John Taiwo\\Desktop\\opencv\\aug\\looselyChained_aug\\looselyChained_aug\"\n",
+    "path = r\"C:\\Users\\kemi\\Desktop\\opencv\\aug\\looselyChained_aug\\looselyChained_aug\"\n",
     "\n",
     "for times in range(aug_times):\n",
     "    \n",
