Update looselyChained-tightlyChained-unchained dogs classification.ipynb

--- a/Model/looselyChained-tightlyChained-unchained dogs classification.ipynb
+++ b/Model/looselyChained-tightlyChained-unchained dogs classification.ipynb
@@ -33,9 +33,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_path = r\"C:\\Users\\John Taiwo\\Desktop\\opencv\\aug\\data\\train\"\n",
-    "valid_path = r\"C:\\Users\\John Taiwo\\Desktop\\opencv\\aug\\data\\valid\"\n",
-    "test_path = r\"C:\\Users\\John Taiwo\\Desktop\\opencv\\aug\\data\\test\""
+    "train_path = r\"C:\\Users\\kemi\\Desktop\\opencv\\aug\\data\\train\"\n",
+    "valid_path = r\"C:\\Users\\kemi\\Desktop\\opencv\\aug\\data\\valid\"\n",
+    "test_path = r\"C:\\Users\\kemi\\Desktop\\opencv\\aug\\data\\test\""
    ]
   },
   {
